--- a/RealEstate_Dapper_UI/Views/Shared/Components/_DefaultWhoWeAreComponentPartial/Default.cshtml
+++ b/RealEstate_Dapper_UI/Views/Shared/Components/_DefaultWhoWeAreComponentPartial/Default.cshtml
@@ -8,16 +8,13 @@
                 </div>
                 <div class="col-lg-7 pl-lg-0">
                     <div class="w3l-right-info">
-                        <h6 class="title-small">Biz Kimiz?</h6>
-                        <h3 class="title-big">Yutiçi ve Yurtdışı Emlakta Tecrübeli Kadro</h3>
+                        <h6 class="title-small">@ViewBag.vTitle</h6>
+                        <h3 class="title-big">@ViewBag.vSubtitle</h3>
                         <p class="mt-4">
-                            15 yılı aşkın deneyime sahibiz, tüm dünyada 70'den fazla ülkede 20.000'den fazla kişi bizim için çalışıyor.
-                            İşimiz hakkında daha fazla bilgi edinin!
-                            Lorem ipsum vive dolor sit amet.
+                            @ViewBag.vDescription1
                         </p>
                         <p class="mt-3">
-                            Viverra feugiat. Pellen tesque libero ut justo,
-                            ultrices in ligula. Semper at tempufddfel lorem ipsum.
+                            @ViewBag.vDescription2
                         </p>
                         <ul class="w3l-right-book w3l-right-book-grid mt-md-5 mt-4">
                             <li><span class="fa fa-check" aria-hidden="true"></span>Olağanüstü Gayrimenkuller</li>
