--- a/RealEstate_Dapper_UI/Views/Shared/Components/_DefaultHomePageProductList/Default.cshtml
+++ b/RealEstate_Dapper_UI/Views/Shared/Components/_DefaultHomePageProductList/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<RealEstate_Dapper_UI.Dtos.BottomGridDtos.ResultProductDtos>
+﻿@model List<RealEstate_Dapper_UI.Dtos.BottomGridDtos.ResultProductDto>
 
 <section class="locations-1" id="locations">
     <div class="locations py-5">
