--- a/RealEstate_Dapper_UI/Views/Product/CreateProduct.cshtml
+++ b/RealEstate_Dapper_UI/Views/Product/CreateProduct.cshtml
@@ -20,7 +20,7 @@
                     <input type="text" asp-for="productTitle" class="form-control" />
                     <br />
                     <label>Kategori:</label>
-                    <input type="text" asp-for="productTitle" class="form-control" />
+                    @Html.DropDownListFor(x => x.productCategoryID,(List<SelectListItem>)ViewBag.CategoryValues,new {@class="form-control"})
                     <br />
                     <label>Fiyat:</label>
                     <input type="text" asp-for="productTitle" class="form-control" />
