--- a/RealEstate_Dapper_UI/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/RealEstate_Dapper_UI/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -1,11 +1,11 @@
 ﻿<div class="sidebar pe-4 pb-3">
     <nav class="navbar bg-light navbar-light">
         <a href="index.html" class="navbar-brand mx-4 mb-3">
-            <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>DASHMIN</h3>
+            <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>Emlak</h3>
         </a>
         <div class="d-flex align-items-center ms-4 mb-4">
             <div class="position-relative">
-                <img class="rounded-circle" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                <img class="rounded-circle" src="~/dashmin-1.0.0/img/user.jpg" alt="" style="width: 40px; height: 40px;">
                 <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
             </div>
             <div class="ms-3">
@@ -14,28 +14,26 @@
             </div>
         </div>
         <div class="navbar-nav w-100">
-            <a href="index.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Elements</a>
-                <div class="dropdown-menu bg-transparent border-0">
-                    <a href="button.html" class="dropdown-item">Buttons</a>
-                    <a href="typography.html" class="dropdown-item">Typography</a>
-                    <a href="element.html" class="dropdown-item">Other Elements</a>
-                </div>
-            </div>
-            <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a>
-            <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
-            <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
-            <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a>
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>
-                <div class="dropdown-menu bg-transparent border-0">
-                    <a href="signin.html" class="dropdown-item">Sign In</a>
-                    <a href="signup.html" class="dropdown-item">Sign Up</a>
-                    <a href="404.html" class="dropdown-item">404 Error</a>
-                    <a href="blank.html" class="dropdown-item active">Blank Page</a>
-                </div>
-            </div>
+            <a href="/Admin/Index/" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>            
+            <a href="/Default/Index/" class="nav-item nav-link"><i class="fa fa-arrow-circle-left me-2"></i>Siteye Git</a>
+            <a href="/Category/Index/" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Kategori</a>
+            <a href="/Employee/Index/" class="nav-item nav-link"><i class="fa fa-male me-2"></i>Personel</a>
+            <a href="/Product/Index/" class="nav-item nav-link"><i class="fa fa-table me-2"></i>İlan</a>
+            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Grafik</a>
+            <a href="/Statistics/Index/" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>İstatistik</a>
+            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-anchor me-2"></i>Api</a>
+            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-beer me-2"></i>Biz Kimiz</a>
+            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-ambulance me-2"></i>Hizmet</a>
+            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-asterisk me-2"></i>Lokasyon</a>
+            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-comment me-2"></i>Referans</a>
+            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-birthday-cake me-2"></i>Günün Fırsatı</a>
+            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Mail Listesi</a>
+            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-envelope-open me-2"></i>Mail İşlem</a>
+            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-phone me-2"></i>İletişim</a>
+            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Gelen Mesaj</a>
+            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Ayarlar</a>
+            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Çıkış</a>
+
         </div>
     </nav>
 </div>
