--- a/RealEstate_Dapper_UI/Views/Product/Index.cshtml
+++ b/RealEstate_Dapper_UI/Views/Product/Index.cshtml
@@ -23,6 +23,7 @@
                                 <th scope="col">Silme</th>
                                 <th scope="col">Güncelleme</th>
                                 <th scope="col">Sitede İncele</th>
+                                <th scope="col">Günün Fırsatları</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -39,6 +40,16 @@
                                     <td><a href="/Product/DeleteProduct/@item.productID" class="btn btn-outline-danger">Sil</a></td>
                                     <td><a href="/Product/UpdateProduct/@item.productID" class="btn btn-outline-success">Güncelle</a></td>
                                     <td><a href="/Product/ProductDetail/@item.productID" class="btn btn-outline-primary">Sitede Gör</a></td>
+                                    <td>
+                                        @if(item.productDealofTheDay == true)
+                                        {
+                                            <a href="/Product/UpdateProduct/@item.productID" class="btn btn-outline-warning">Pasif Yap</a>
+                                        }
+                                        @if (item.productDealofTheDay == false)
+                                        {
+                                            <a href="/Product/UpdateProduct/@item.productID" class="btn btn-outline-secondary">Aktif Yap</a>
+                                        }
+                                    </td>
                                 </tr>
                             }
                         </tbody>
