--- a/RealEstate_Dapper_UI/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/RealEstate_Dapper_UI/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -19,20 +19,20 @@
             <a href="/Category/Index/" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Kategori</a>
             <a href="/Employee/Index/" class="nav-item nav-link"><i class="fa fa-male me-2"></i>Personel</a>
             <a href="/Product/Index/" class="nav-item nav-link"><i class="fa fa-table me-2"></i>İlan</a>
-            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Grafik</a>
+            <a href="#" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Grafik</a>
             <a href="/Statistics/Index/" class="nav-item nav-link"><i class="fa fa-calculator me-2"></i>İstatistik</a>
             <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-anchor me-2"></i>Api</a>
             <a href="/WhoWeAre/Index/" class="nav-item nav-link"><i class="fa fa-beer me-2"></i>Biz Kimiz</a>
             <a href="/Service/Index/" class="nav-item nav-link"><i class="fa fa-ambulance me-2"></i>Hizmet</a>
-            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-map-marker me-2"></i>Lokasyon</a>
-            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-comment me-2"></i>Referans</a>
-            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-birthday-cake me-2"></i>Günün Fırsatı</a>
-            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Mail Listesi</a>
-            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-envelope-open me-2"></i>Mail İşlem</a>
-            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-phone me-2"></i>İletişim</a>
-            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-cubes me-2"></i>Gelen Mesaj</a>
-            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-cog me-2"></i>Ayarlar</a>
-            <a href="/Chart/Index/" class="nav-item nav-link"><i class="fa fa-times me-2"></i>Çıkış</a>
+            <a href="/PopularLocation/Index/" class="nav-item nav-link"><i class="fa fa-map-marker me-2"></i>Lokasyon</a>
+            <a href="#" class="nav-item nav-link"><i class="fa fa-comment me-2"></i>Referans</a>
+            <a href="#" class="nav-item nav-link"><i class="fa fa-birthday-cake me-2"></i>Günün Fırsatı</a>
+            <a href="#" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Mail Listesi</a>
+            <a href="#" class="nav-item nav-link"><i class="fa fa-envelope-open me-2"></i>Mail İşlem</a>
+            <a href="#" class="nav-item nav-link"><i class="fa fa-phone me-2"></i>İletişim</a>
+            <a href="#" class="nav-item nav-link"><i class="fa fa-cubes me-2"></i>Gelen Mesaj</a>
+            <a href="#" class="nav-item nav-link"><i class="fa fa-cog me-2"></i>Ayarlar</a>
+            <a href="#" class="nav-item nav-link"><i class="fa fa-times me-2"></i>Çıkış</a>
 
         </div>
     </nav>
